Changed all instances of mypipeline to svclustering

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    ferlab/mypipeline Nextflow config file
+    ferlab/svclustering Nextflow config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -195,9 +195,9 @@ dag {
 }
 
 manifest {
-    name            = 'ferlab/mypipeline'
+    name            = 'ferlab/svclustering'
     author          = """me"""
-    homePage        = 'https://github.com/ferlab/mypipeline'
+    homePage        = 'https://github.com/ferlab/svclustering'
     description     = """minimalist nf-core template"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
