--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,8 @@
 ----------------------------------------------------------------------------------------
 */
 
+
+
 // Global default params, used in configs
 params {
 
@@ -20,6 +22,10 @@ params {
     help                         = false
     version                      = false
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
+    fasta                        = null
+    fasta_fai                    = null
+    fasta_dict                   = null
+    enable_conda                 = true
 
     // Config options
     config_profile_name        = null
@@ -175,6 +181,10 @@ process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 // Disable process selector warnings by default. Use debug profile to enable warnings.
 nextflow.enable.configProcessNamesValidation = false
+
+
+// Enable binary scripts for modules
+nextflow.enable.moduleBinaries = true
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
