--- a/nextflow.config
+++ b/nextflow.config
@@ -189,6 +189,9 @@ process.shell = ['/bin/bash', '-euo', 'pipefail']
 // Disable process selector warnings by default. Use debug profile to enable warnings.
 nextflow.enable.configProcessNamesValidation = false
 
+// Enable binary scripts for modules
+nextflow.enable.moduleBinaries = true
+
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
